--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -8,32 +8,24 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #f6f8fc;
+}
+
 .content {
     padding: 1rem;
+    background-color: white;
+    height: 100vh;
+    width: 100vw;
 }
 
 
-ol.pokemons {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+@media screen and (min-width: 992px) {
+    .content {
+        max-width: 992px;
+        height: auto;
+        margin: 1rem auto;
+        border-radius: 1rem;
+    }
 }
 
-ol.pokemons li {
-    margin: .5rem;
-    padding: 2rem 1rem;
-    background: #14a06f;
-    color: white;
-    border-radius: 1rem;
-
-    display: flex;
-    flex-direction: column;
-}
-
-ol.pokemons li img {
-    max-width: 100%;
-    height: 100px;
-}
